# cam_infer_models

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cam-infer-models.yaml  cam_tflite_infer.yaml
include/: dataStructures.h  interface.h
patches/: 0001-Add-missing-FlatBuffers-headers-for-TFLite-build.patch
src/: filter_g.c  grpc_client.cc  objectDetection2D.cc
tflite/: CMakeLists.txt  objectDetection_tflite.cc
